Added new code to LocationResult component and FaqCard

--- a/src/index.css
+++ b/src/index.css
@@ -107,3 +107,11 @@
 .SocialMediaLinks{
   margin-left: 100px;
 }
+
+.faq-block .faq-content{
+  display: none;
+}
+
+.opened .faq-content{
+  display: block;
+}
