--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,101 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Myriad Pro";
+  src: url("Fonts/Myriad-Pro-Bold.ttf") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Myriad Pro Condensed";
+  src: url("Fonts/Myriad-Pro-Condensed.ttf") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Myriad Pro Light Condensed";
+  src: url("Fonts/Myriad-Pro-Semibold-Condensed.otf") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Myriad Pro Regular";
+  src: url("Fonts/Myriad-Pro-Regular.ttf") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Myriad Pro Light";
+  src: url("Fonts/Myriad-Pro-Semibold.ttf") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+
+body {
+  @apply font-normal font-fontMyriadRegular text-sm lg:text-base min-h-[100vh];
+}
+body.menu-opened {
+  @apply overflow-hidden lg:overflow-auto;
+}
+#reactele {
+  @apply flex flex-col w-full min-h-[100vh];
+}
+
+/**/
+.overflow-hidden-no {
+  @apply overflow-hidden;
+}
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+  outline: none !important;
+}
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  @apply m-0 p-0 text-black;
+}
+ul {
+  @apply list-none m-0 p-0;
+}
+
+img {
+  @apply max-w-full h-auto align-middle;
+}
+
+a {
+  @apply no-underline text-black block;
+}
+a:hover {
+  @apply no-underline;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  @apply m-0;
+}
+
+.container-custom {
+  @apply w-full max-w-[71.25rem] mx-auto;
+}
+
+.button {
+  @apply inline-flex align-top justify-center items-center bg-white border border-black text-sm font-normal px-[1.125rem] py-3.5 h-12 border-b-[3px] hover:bg-black hover:text-white transition-all duration-300 hover:no-underline;
+}
+
 .centered-container {
   @apply mx-auto px-5 md:px-14 max-w-screen-xl;
 }
@@ -11,107 +106,215 @@
 }
 
 .primary-cta {
-  @apply bg-sky-500 hover:bg-sky-600;
+  /* @apply bg-sky-500 hover:bg-sky-600; */
 }
 
 .secondary-cta {
-  @apply bg-sky-700 hover:bg-sky-800;
+  /* @apply bg-sky-700 hover:bg-sky-800; */
 }
 
 /* FAQ CSS - Starts*/
-.faq-sec{
-  @apply py-5 lg:py-[60px]
+.faq-sec {
+  @apply py-5 lg:py-[60px];
 }
-.faq-sec .container{
-  @apply max-w-[1240px]
+.faq-sec .container {
+  @apply max-w-[1240px];
 }
-.faq-blocks{
-  @apply px-4 lg:px-[50px] py-2 lg:py-[60px] flex flex-wrap items-start max-w-[1200px] mx-auto shadow-[3.5px_6.06px_10px_rgba(1,1,1,0.18)] lg:shadow-[3.5px_6.06px_21px_rgba(1,1,1,0.18)] rounded-[5px] lg:rounded-[30px] justify-between mt-6 lg:mt-11
+.faq-blocks {
+  @apply px-4 lg:px-[50px] py-2 lg:py-[60px] flex flex-wrap items-start max-w-[1200px] mx-auto shadow-[3.5px_6.06px_10px_rgba(1,1,1,0.18)] lg:shadow-[3.5px_6.06px_21px_rgba(1,1,1,0.18)] rounded-[5px] lg:rounded-[30px] justify-between mt-6 lg:mt-11;
 }
-.faq-blocks .left-faq{
-  @apply w-full lg:w-[calc(50%_-_30px)]
+.faq-blocks .left-faq {
+  @apply w-full lg:w-[calc(50%_-_30px)];
 }
-.faq-blocks .right-faq{
-  @apply w-full lg:w-[calc(50%_-_30px)]
+.faq-blocks .right-faq {
+  @apply w-full lg:w-[calc(50%_-_30px)];
 }
-.faq-blocks .faq-block{
+.faq-blocks .faq-block {
   @apply w-full border-b  border-opacity-10;
 }
-.faq-blocks .faq-block:last-child{
-  @apply border-b-0
+.faq-blocks .faq-block:last-child {
+  @apply border-b-0;
 }
-.faq-blocks .left-faq .faq-block:last-child{
-  @apply border-b lg:border-b-0
+.faq-blocks .left-faq .faq-block:last-child {
+  @apply border-b lg:border-b-0;
 }
 
-.faq-blocks .faq-block h4{
-  @apply text-base lg:text-xl  mt-0  font-medium lg:font-semibold py-4 pr-10 relative leading-6 lg:leading-7 cursor-pointer select-none
+.faq-blocks .faq-block h4 {
+  @apply text-base lg:text-xl  mt-0  font-medium lg:font-semibold py-4 pr-10 relative leading-6 lg:leading-7 cursor-pointer select-none;
 }
-.faq-blocks .faq-block h4 .faq-icon{
+.faq-blocks .faq-block h4 .faq-icon {
   @apply absolute top-4 right-0 border lg:border-2  w-5 lg:w-7 h-5 lg:h-7 rounded-full z-10;
 }
-.faq-blocks .faq-block h4 .faq-icon:before{
-  @apply content-[''] absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-2 lg:w-3 h-[1px] lg:h-0.5 
+.faq-blocks .faq-block h4 .faq-icon:before {
+  @apply content-[''] absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-2 lg:w-3 h-[1px] lg:h-0.5;
 }
-.faq-blocks .faq-block h4 .faq-icon:after{
-  @apply content-[''] absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 h-2 lg:h-3 w-[1px] lg:w-0.5 
+.faq-blocks .faq-block h4 .faq-icon:after {
+  @apply content-[''] absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 h-2 lg:h-3 w-[1px] lg:w-0.5;
 }
-.faq-blocks .faq-block.opened h4 .faq-icon:after{
-  @apply opacity-0
+.faq-blocks .faq-block.opened h4 .faq-icon:after {
+  @apply opacity-0;
 }
 
-
-.faq-blocks .faq-block .faq-content{
+.faq-blocks .faq-block .faq-content {
   @apply max-h-0 overflow-hidden;
 }
-.faq-blocks .faq-block.opened .faq-content{
+.faq-blocks .faq-block.opened .faq-content {
   @apply pb-5 max-h-96;
 }
 
 /* FAQ CSS  - Ends */
 
 /* Header - Start */
+/* Top-bar Start */
+
+.labelLinks.top-bar{
+  @apply bg-primaryRed;
+}
+.topbar-navigation ul li a{
+  @apply text-white font-semibold font-fontMyriadCondensed text-base leading-4;
+}
+.topbar-navigation ul li{
+  @apply hover:bg-topbarHoverBG px-4 py-2;
+}
+
+/* Top-bar End */
+
+/* Lower-bar Start */
+.lower-bar .header-logo{
+  @apply max-w-[21.375rem] my-2.5;
+}
+/* nav.primary-navigation{
+  @apply absolute lg:static top-0 left-0 z-[100] right-0 bg-white lg:bg-transparent -translate-y-[580px] lg:translate-y-0 transition-all duration-700 ease-in-out;
+}
+nav.primary-navigation.open{
+  @apply flex absolute top-24 left-0 right-0 z-[100] translate-y-0 transition-all duration-700 ease-in-out;
+} */
+
+nav.primary-navigation{
+  transition: all 0.3s ease-in-out;
+  @apply bg-white lg:bg-transparent max-h-full h-0 hidden lg:block lg:h-full overflow-auto;
+}
+nav.primary-navigation.open{
+  transition: all 0.3s ease-in-out;
+  @apply bg-white lg:bg-transparent h-full block;
+}
 
 
+
+
+
+nav.primary-navigation ul li{
+  @apply flex items-center hover:bg-white;
+}
+nav.primary-navigation ul li a{
+  @apply text-lg leading-[1.125rem] font-semibold font-fontMyriadCondensed text-primaryBlue lg:text-white px-5 py-6 hover:text-primaryBlue;
+}
+
+/* Lower-bar End */
 
 /* Header - Ends */
 
 /* Footer Css - Starts */
 
+.footer-section{
+  @apply bg-primaryBlue py-[1.875rem] lg:py-[4.688rem] text-white text-lg leading-6 font-semibold font-fontMyriadCondensed border-t-[11px] border-t-footerBorder;
+}
+.footer-section .legal img{
+  @apply max-w-[3.75rem] mb-4;
+}
+.footer-nav-links{
+  @apply my-1;
+}
+.footer-nav-links ul li{
+  @apply flex justify-center lg:justify-start;
+}
+.footer-nav-links ul li a{
+  @apply text-white underline;
+}
+.legal,
+.social, 
+.corporate{
+  @apply w-full lg:w-1/3 block lg:inline-block;
+}
+.legal{
+  @apply text-center lg:text-left;
+}
+
+/* .footer-section .social{
+  @apply flex flex-col justify-end;
+} */
+.social .social-headline{
+  @apply text-4xl font-bold font-fontMyriadBold text-center lg:text-right mb-4;
+}
+
+.corporate .corporate-logo{
+  @apply max-w-[12.5rem] mb-5 mx-auto table;
+}
+.corporate .corporate-logo img{
+  @apply w-full;
+}
+.corporate-address{
+  @apply text-center;
+}
+
+.corporate-address .corporate-location-phone{
+  @apply flex items-center justify-center;
+}
+.corporate-address .corporate-location-phone a{
+  @apply text-white;
+}
+.footer-section .powered-by-title{
+  @apply flex justify-center lg:justify-end gap-1.5 mt-4;
+}
+.footer-section .powered-by-title a{
+  @apply text-white font-fontMyriadRegular text-xs font-normal;
+}
+
 /* Footer Css - Ends  */
 
-.labelLinks{
-  background-color: #cf2e2e;
-}
-.upperLabelLinks{
+.upperLabelLinks {
   margin-left: 500px;
 }
 
-.labelLinksLower{
+.labelLinksLower {
   background-color: #004990;
 }
 
-.FooterDiv{
+.FooterDiv {
   /* #004990 */
   background-color: #004990;
 }
 
-.houseLending{
+.houseLending {
   margin-left: 50px;
   margin-top: 50px;
 }
 
-.Office{
+.Office {
   margin-left: 100px;
 }
-.SocialMediaLinks{
+.SocialMediaLinks {
   margin-left: 100px;
 }
 
-.faq-block .faq-content{
+.faq-block .faq-content {
   display: none;
 }
 
-.opened .faq-content{
+.opened .faq-content {
   display: block;
+}
+
+/* Media Queries */
+
+
+@media screen and (max-width: 1140px){
+  .mobile-pad{
+    @apply px-5;
+  }  
+}
+@media screen and (max-width: 1024px){
+  .footer-section .legal img{
+    @apply mx-auto;
+  }
 }
